fix image alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,6 +77,7 @@ footer a {
   flex-direction: row;
   justify-content: space-between;
   position: relative;
+  align-items: center;
 }
 .post-list-item a section {
   display: flex;
