--- a/sass/post-list-item.sass
+++ b/sass/post-list-item.sass
@@ -12,6 +12,7 @@
     flex-direction: row
     justify-content: space-between
     position: relative
+    align-items: center
 
     section
       display: flex
